@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=Klotski
 _Comment=Solve puzzles by sliding blocks
 Exec=gnotski
-Icon=gnotski-icon.png
+Icon=gnome-klotski
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;Game;LogicGame;
